--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                             </a>
                         </div>
                         <div class="tiki-promotion">
-                            <img width="360px"
-                                src="https://salt.tikicdn.com/cache/w1080/ts/tka/af/5b/b3/4a35b857aa966f5965141bc98fc23f7e.png.webp">
+                            <a href=""><img width="360px"
+                                    src="https://salt.tikicdn.com/cache/w1080/ts/tka/af/5b/b3/4a35b857aa966f5965141bc98fc23f7e.png.webp"></a>
                         </div>
                     </div>
                     <div class="col-7" style="padding: 0;
