--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                     <img src="./image/header/search-icon.png">
                                 </i>
                                 <input class="search" placeholder="Bạn tìm gì hôm nay" />
-                                <button class="btn">tìm kiếm</button>
+                                <button>tìm kiếm</button>
                             </form>
                         </div>
                     </div>
